# Ultra_mnn_android_demo

converter/: MNNConvert  MNNDump2Json.out  Mb_Tiny_RFB_FD_train_input_320.json  Mb_Tiny_RFB_FD_train_input_320.mnn  convert_onnx.sh  convert_tf.sh  dump_mnnJson.sh
mnn_jni/jni/: Android.mk  Application.mk
mnn_jni/jni/alg/include/: UltraLightFastGenericGaceDetector1MB.h  imgProcess.h
mnn_jni/jni/alg/src/: UltraLightFastGenericGaceDetector1MB.cpp  imgProcess.cpp
mnn_jni/jni/net_engine/: net.cpp  net.h
mnn_mtcnn/android/app/: CMakeLists.txt  build.gradle
mnn_mtcnn/android/app/includes/: imgProcess.h
mnn_mtcnn/android/app/src/main/cpp/: native-lib.cpp
mnn_mtcnn/android/app/src/main/java/opencv4unity/camera1gltest1/: MyNDKOpencv.java
mnn_mtcnn/android/app/src/main/res/values/: strings.xml
mnn_mtcnn/android/gradle/wrapper/: gradle-wrapper.properties
